[gd_scene load_steps=5 format=3 uid="uid://jnt7rswx64d4"]

[ext_resource type="Texture2D" uid="uid://crh74rpc5s4ef" path="res://asset/tab.png" id="1_uj0s4"]
[ext_resource type="Texture2D" uid="uid://cq1rikimvki0u" path="res://asset/tabClick.png" id="2_fh16k"]
[ext_resource type="Script" path="res://scenes/slot_v_2.gd" id="3_v75m2"]
[ext_resource type="FontFile" uid="uid://c5e7dfiiyk0hv" path="res://asset/NormalFont.ttf" id="4_0vfix"]

[node name="SlotV2" type="TextureButton"]
clip_contents = true
custom_minimum_size = Vector2(96, 96)
texture_normal = ExtResource("1_uj0s4")
texture_pressed = ExtResource("2_fh16k")
texture_hover = ExtResource("2_fh16k")
texture_disabled = ExtResource("2_fh16k")
texture_focused = ExtResource("2_fh16k")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("3_v75m2")

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(48, 48)

[node name="Amount" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 53.0
offset_right = 92.0
offset_bottom = 94.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0vfix")
theme_override_font_sizes/font_size = 30
text = "99"
horizontal_alignment = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
